# PulseReportor

./: .gitignore  README.md  SPEC.md
arduino/pulse_logger/: pulse_logger.ino
python/: .env.sample  Makefile  README.md  SPEC.md  pyproject.toml
python/src/hragent/: __init__.py  agent.py  analysis.py  cli.py  collect.py  config.py  plots.py  report_template.md  run_full_session.py  serial_collect.py  session_store.py
python/tests/: test_agent_prompt.py  test_analysis.py  test_session_store.py
